# embedded-systems

./: .gitignore  README.md
PCB_Design/ESP_WROOM_32E/: ESP_WROOM_32E.kicad_pcb  ESP_WROOM_32E.kicad_sch
PCB_Design/ESP_WROOM_32E/led_module/: led_module.kicad_pcb  led_module.kicad_prl  led_module.kicad_pro  led_module.kicad_sch
PCB_Design/dice/dice/: dice.kicad_pcb  dice.kicad_prl  dice.kicad_pro  dice.kicad_sch  ~dice.kicad_pro.lck
PCB_Design/pcb_demo/pcd_demo/: pcd_demo.kicad_pcb  pcd_demo.kicad_prl  pcd_demo.kicad_pro  pcd_demo.kicad_sch
embedded_boards/RPI_pico/: README.md
embedded_boards/RPI_pico/Pico_2W/Examples/C_C++/gpio_freertos/: CMakeLists.txt  FreeRTOSConfig.h  main.c
embedded_boards/esp32/esp32_c6/blink_gpio/: CMakeLists.txt  sdkconfig
embedded_boards/silicon_labs/efr32bg22/final_test_led_uart/: .cproject  .project  .projectlinkstore  app.c  final_test_led_uart.pintool  final_test_led_uart.slcp  final_test_led_uart.slps
embedded_boards/silicon_labs/efr32bg22/first_trial/: .cproject  .project  .projectlinkstore  first_trial.pintool  first_trial.slcp  first_trial.slps
embedded_boards/silicon_labs/efr32bg22/led_blink_learning/: .cproject  .project  .projectlinkstore  app.c  led_blink_learning.pintool  led_blink_learning.slcp  (+1 more)
embedded_boards/stm32/F446RE/led_blink_toolchain/: CMakeLists.txt  main.c
embedded_projects/multi_mcu_slave_master/.metadata/: version.ini
embedded_projects/multi_mcu_slave_master/Pico_Master/: master.py
embedded_projects/multi_mcu_slave_master/slave/: .cproject  .mxproject  slave Debug.launch  slave.ioc
(+408 files in other folders)
